webook/webook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-record-service
spec:
  # 三个副本
  # 作业：
  # replicas: 2
  replicas: 3
  selector:
    matchLabels:
      app: webook-record
  template:
    metadata:
      labels:
        # 这个 webook-record 一定要和前面的 selector 的 matchLabels 匹配上
        app: webook-record
    # 这个是 Deployment 管理的 Pod 模版
    spec:
      # Pod 里面运行的所有的 container
      containers:
        - name: webook-record
          image: wsqigo/webook:v0.0.1
          ports:
            - containerPort: 8080
