webook/webook-record-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-record-redis
spec:
  selector:
    app: webook-record-redis
  ports:
    - protocol: TCP
      # k8s 内部访问端口
      port: 6379
      # 作业
      # port: 6380
      # 外部访问端口，必须在 30000-32767
      nodePort: 31379
      # pod 暴露的端口
      targetPort: 6379
  type: NodePort
